--- a/src/components/checkout/checkout.css
+++ b/src/components/checkout/checkout.css
@@ -4,28 +4,47 @@
     align-items: center;
 }
 
+/* Estilos generales del formulario */
 .checkout-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.checkout-form input {
-    margin-bottom: 10px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.checkout-form button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.checkout-form button:hover {
-    background-color: #0056b3;
-}
+    width: 300px; /* Ajusta el ancho según tus preferencias */
+    margin: 0 auto; /* Centra el formulario en la página */
+    padding: 20px; /* Agrega espacio alrededor del contenido */
+    border-radius: 5px; /* Bordes redondeados */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+  }
+  
+  /* Título del formulario */
+  .checkout-form h4 {
+    text-align: center; /* Centra el título */
+    margin-bottom: 20px; /* Espacio debajo del título */
+  }
+  
+  /* Campos del formulario */
+  .checkout-form input {
+    display: block; /* Cada campo ocupa todo el ancho */
+    margin-bottom: 10px; /* Espacio entre campos */
+    padding: 10px; /* Espacio dentro de los campos */
+    border: 1px solid #ccc; /* Bordes de los campos */
+    border-radius: 3px; /* Bordes redondeados de los campos */
+    font-size: 16px; /* Tamaño de fuente */
+  }
+  
+  label{
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  /* Botón de envío */
+  .checkout-form button {
+    background-color: #02c81f ; /* Color de fondo */
+    color: white; /* Color del texto del botón */
+    border: none; /* Quita el borde */
+    padding: 10px 20px; /* Espacio dentro del botón */
+    border-radius: 5px; /* Bordes redondeados del botón */
+    cursor: pointer; /* Cambia el cursor al pasar por encima */
+  }
+  
+  .checkout-form button:hover {
+    background-color: #00a43c; /* Color de fondo al pasar el cursor */
+  }
+  
