--- a/src/components/itemList/ItemList.css
+++ b/src/components/itemList/ItemList.css
@@ -2,15 +2,24 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
-    margin: 20px;
 }
 
 .product-list-container .item {
-    flex: 1 0 300px;
-    margin: 15px;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    width: calc(33.33% - 20px); /* Ajusta el ancho de cada ítem según tu diseño */
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
+
+/* Ajustes para pantallas más pequeñas */
+@media screen and (max-width: 768px) {
+    .product-list-container .item {
+        width: calc(50% - 20px);
+    }
+}
+
+/* Ajustes para pantallas aún más pequeñas */
+@media screen and (max-width: 480px) {
+    .product-list-container .item {
+        width: 100%;
+    }
 }
